# Trd

./: .env  Cargo.toml
src/: config.rs  main.rs  models.rs  rpc_client.rs
