[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
solana-client = "1.18.0"
solana-sdk = "1.18.0"
solana-transaction-status = "1.18.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
# Remove if not used elsewhere
# spl-token = "3.5.0"